--- a/eShop.WebApp/Views/Contact/Create.cshtml
+++ b/eShop.WebApp/Views/Contact/Create.cshtml
@@ -3,6 +3,13 @@
 @{
     ViewData["Title"] = "Create";
 }
+@section scripts{
+    <script src="/js/HiddenSibar.js"></script>
+    <script>
+        var hidden = new Hidden();
+        hidden.initialize();
+    </script>
+}
 
 <div id="contact-page" class="container">
     <div class="bg">
@@ -35,7 +42,6 @@
                                 <option value='1'>True</option>
                                 <option value='0'>False</option>
                             </select>
-                           
                         </div>
                         <div class="form-group col-md-12">
                             <textarea name="message" asp-for="Message" id="message" required="required" class="form-control" rows="8" placeholder="Your Message Here"></textarea>
